--- a/.github/config.yml
+++ b/.github/config.yml
@@ -8,7 +8,7 @@ newIssueWelcomeComment: >
   
   Thank you and congrats 🎉 for opening your very first issue in this project. 
   Please adhere to our [Code of Conduct](https://github.com/prathimacode-hub/ML-ProjectKart/blob/main/CODE_OF_CONDUCT.md). 👍🏻
-  You may submit a PR if you like, make sure to follow our [Pull Request Template]().
+  You may submit a PR if you like, make sure to follow our [Pull Request Template](https://github.com/prathimacode-hub/ML-ProjectKart/blob/main/.github/pullrequest_template.md).
   
   Feel free to get in touch with me through social media handles. Hope to see you there!😄
   
